[package]
name = "tea-whistle"
version = "0.1.0"
authors = ["Jacob Mischka <jacob@mischka.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2.0"
nb = "0.1.2"
ufmt = "0.1.0"
embedded-hal = "0.2.4"
avr-device = { version = "0.3.0", features = ["atmega328p"] }

[dependencies.arduino-uno]
git = "https://github.com/Rahix/avr-hal"
features = [ "arduino-nano" ]

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
